Updated for more optimzations

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "prod": "webpack-dev-server --mode production --open",
     "start": "webpack-dev-server --mode development --open"
   },
   "author": "Mubashir Cheentavida",
@@ -27,6 +28,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.28.3",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.14"
   },
