--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
 	"presets": [
 
-		["env", {
+		["@babel/preset-env", {
 
 			"targets": {
 
 				"browsers": [
 
-				"last 1 versions"
+				"last 5 versions"
 				// "ie >= 8"
 
 				]
