--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "autoprefixer": "^9.4.7",
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "babel-loader": "^7.1.5",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "copy-webpack-plugin": "^4.6.0",
